# PumpBot-ESP32

./: .gitignore  .gitmodules  README.md  define.md  spec.md
BlinkGPIO2/: BlinkGPIO2.ino
Main/: Main.ino
blink/main/: blink_example_main.c  idf_component.yml  testimg.h
lcd/: .apl.history  .gitignore  CMakeLists.txt  PumpBot DSL notes.txt  esptool commands.txt  monitor_out  output  output.txt  partitions.csv  precompiled_test.c
lcd/main/: CMakeLists.txt  ILIDriver.c  ILIDriver.h  Kconfig.projbuild  board_config.c  board_config.h  button.c  decode_image.c  file_server.c  http.c  idf_component.yml  lang.c  libfreetype.a.OLD  lua_defs.c  oam.c  oam.h  pb_main.c  pretty_effect.c  pwm_fade.c  pwm_output.c  rgb_fade.c  rotenc.c  rotenc.h  settings.c  socket.c  spi_master_example_main.c  stack_ddt.c  stack_ddt.h  stack_ddt_OLD.c  stack_ddt_OLD.h  utf8.c  wget-log  wibbly_effect.c
lcd/main/freetype/: freetype_extern_declarations.h  obj
lcd/main/includes/: ILIDriver.h  board_config.h  button.h  file_server.h  http.h  lang.h  lua_exports.h  menu_data.h  menus.h  oam.h  pwm_fade.h  pwm_output.h  rgb_fade.h  rotenc.h  settings.h  socket.h  stack_ddt.h  system_status.h  utf8.h
lcd/main/mainfs/: colors  helloworld  index.html  rotenc_while_test  string  test.lua  test.lua.bytecode  the_best_medicine_is
lcd/main/menus/: bootloader.c  menu_data.c
